--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+#    path: /playing/{id}
+#    defaults:
+#        _controller: App\Controller\DefaultController::index
+#        id: 10
+#        imaginary_default_key: true
